<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Van Nex</string>
    <string name="network_connection_timeout">当前网络差，请检查网络链接。</string>
    <string name="mobile">手机号</string>
    <string name="code">验证码</string>
    <string name="ok">提交</string>
    <string name="register_edit_user_name">请输入手机号</string>
    <string name="register_get">获取</string>
    <string name="register_enter_code">请输入验证码</string>
    <string name="register_password">密　码</string>
    <string name="register_edit_password">请输入密码</string>
    <string name="register_confirm_password">确认密码</string>
    <string name="register_enter_confirm_password">请再次输入密码</string>
    <string name="register_sign_in">注册</string>
    <string name="do_not_gain_verification_code_more_than_once">120秒内不能再次发送验证码请求</string>
    <string name="incorrect_verification_code">验证码不正确</string>
    <string name="please_enter_mobile_number">请输入手机号</string>
    <string name="please_new_mobile_number">请输入新手机号</string>
    <string name="please_mobile_number">请输入原手机号</string>
    <string name="please_number">请输入正确手机号</string>
    <string name="incorrect_format_of_mobile_number">手机号码格式不正确</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="please_original_pwd">请输入原密码</string>
    <string name="please_new_pwd">请输入新密码</string>
    <string name="money">金额</string>
    <string name="incorrect_format_of_password">密码格式不正确</string>
    <string name="please_enter_verification_code">请输入验证码</string>
    <string name="please_set_password">请设置密码</string>
    <string name="password_settings_do_not_match">两次设置的密码不一致</string>
    <string name="next">下一步</string>
    <string name="please_invitation_code">请输入推荐码</string>
    <string name="me_two_dimensional_code_selection_failure">二维码选择失败</string>
    <string name="me_two_dimensional_code_acquisition_failure">二维码获取失败</string>
    <string name="me_two_dimensional_code_dimensional_failure">二维码识别失败</string>
    <string name="please_input_tran_address">请输入提币地址</string>
    <string name="please_input_tran_address_check">转账地址必须为42位</string>
    <string name="please_input_tran_address_chain">转账地址不能包含中文</string>
    <string name="please_input_tran_money">请输入提币金额</string>
    <string name="please_input_tran_pwd">请输入交易密码</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="please_input_user_pwd">请输入密码</string>
    <string name="please_input_the_password_again">請再次輸入密碼</string>
    <string name="please_input_remarks">请输入备注</string>
    <string name="please_upload">请上传支付凭证</string>
    <string name="please_input_message_content">请输入留言内容</string>
    <string name="one_more_exit_program">再按一次退出程序</string>
    <string name="please_input_out_num">请输入卖出数量</string>
    <string name="unknown_qr">未知二维码</string>
    <string name="authentication">请输入真实姓名</string>
    <string name="authentication_id">请输入身份证号</string>
    <string name="authentication_success_id">请输入正确身份证号</string>
    <string name="login_Invalid">登录失效,请重新登录</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="value1">0x11</string>
    <string name="value2">0x22</string>
    <string name="value3">0x33</string>
    <string name="value4">0x44</string>
    <string name="login">登    錄</string>
    <string name="welcome_login">欢迎登錄</string>
    <string name="account">用戶名/手機號</string>
    <string name="login_pwd">登錄密碼</string>
    <string name="all_send_car">全民发车</string>
    <string name="van_nex_mall">Van Nex MALL</string>
    <string name="forget_pwd">忘記密碼?</string>
    <string name="forget_password">忘記密碼</string>
    <string name="confirm_login">登 錄</string>
    <string name="mobile_phone_number">手機號碼</string>
    <string name="new_pwd">新密碼</string>
    <string name="input_new_pwd">输入新密碼</string>
    <string name="confirm_new_pwd">確認新密碼</string>
    <string name="enter_code">驗證碼</string>
    <string name="get_code">獲取</string>
    <string name="confirm_the_change">確認更改</string>
    <string name="username">用戶名</string>
    <string name="mine_username">用戶名：</string>
    <string name="confirmation_of_registration">確認註冊</string>
    <string name="register">註    冊</string>
    <string name="register_account_number">注册账号</string>
    <string name="home">首頁</string>
    <string name="my_news">我的消息</string>
    <string name="news_and_information">新闻資訊</string>
    <string name="information_list">公告資訊</string>
    <string name="can_use">可用</string>
    <string name="equivalent_cny">折合(CNY)</string>
    <string name="usdt_tgm">TGM/USDT</string>
    <string name="statue">狀态</string>
    <string name="active_assets">餘額資產</string>
    <string name="repurchase_assets">优享資產</string>
    <string name="dividend_assets">凍結資產</string>
    <string name="freeze">凍結</string>
    <string name="withdraw_money">提幣</string>
    <string name="detail">明細</string>
    <string name="number">編號：</string>
    <string name="transfer_to">轉入</string>
    <string name="turn_out">轉出</string>
    <string name="dividend_market">交易市場</string>
    <string name="dividend_quotes">行情</string>
    <string name="asset_management">資產管理</string>
    <string name="me">我的</string>
    <string name="financial_details">財務明細</string>
    <string name="acceleration_value">加速值</string>
    <string name="me_active_assets">活動資產(TGM)</string>
    <string name="me_dividend_assets">買入資產(USDT)</string>
    <string name="me_repurchase_assets">重購資產(USDT)</string>
    <string name="personal_information">個人信息</string>
    <string name="my_dividend">交易記錄</string>
    <string name="my_recommendation">我要推薦</string>
    <string name="invite_friends">邀请好友扩大您的团队</string>
    <string name="payment_password">支付密碼</string>
    <string name="binding_account">綁定郵箱</string>
    <string name="my_team">我的團隊</string>
    <string name="user_feedback">用戶反饋</string>
    <string name="out_login">退出登錄</string>
    <string name="prompt">提示</string>
    <string name="sure_password">确认交易密码</string>
    <string name="are_you_sure_to_log_out">确定退出登录吗？</string>
    <string name="cancel">取消</string>
    <string name="determine">確定</string>
    <string name="dividend">買入</string>
    <string name="sell">賣出</string>
    <string name="equivalent_assets">资产折合(CNY)</string>
    <string name="the_dividend">買入中</string>
    <string name="time">時  間</string>
    <string name="delegate_quantity">委託量(USDT)</string>
    <string name="delegate">委託量</string>
    <string name="dividend_income">買入收益</string>
    <string name="total_turnover">成交總額(USDT)</string>
    <string name="actual_transaction">實際成交</string>
    <string name="volume">成交量(USDT)</string>
    <string name="dividend_payout">買入額(USDT)</string>
    <string name="volume_eth">成交量(TGM)</string>
    <string name="rate_of_return">收益率</string>
    <string name="success">買入成功</string>
    <string name="cancel_order">取消掛單</string>
    <string name="in_the_list">掛單中</string>
    <string name="deal_success">已成交</string>
    <string name="my_invitation_code">我的邀請碼</string>
    <string name="copy">複製</string>
    <string name="udp_login_pwd">修改登錄密碼</string>
    <string name="udp_pay_pwd">修改支付密碼</string>
    <string name="set_pay_pwd">设置支付密碼</string>
    <string name="please_input_the_email">请输入郵箱</string>
    <string name="modified_after_binding">注：郵箱一經綁定不可修改</string>
    <string name="feedback_feedback">问题/意见描述</string>
    <string name="please_input_your_valuable_opinions">请填写您宝贵的意见或建议，以便我们更好的帮助您解决问题。</string>
    <string name="add_image">添加圖片</string>
    <string name="commit_feedback">提交</string>
    <string name="feedback_list">反饋列表</string>
    <string name="feedback">反饋</string>
    <string name="order_details">訂單詳情</string>
    <string name="dividends_can_not_be_suspended">注：買入未達10日，不可停止買入。</string>
    <string name="stop_the_dividend">停止買入</string>
    <string name="replace_the_head">更換頭像</string>
    <string name="choose_one_from_the_album">從相冊選一張</string>
    <string name="currency_assets">轉出資產</string>
    <string name="available_assets">可用資產</string>
    <string name="please_input_target_address">请输入目標地址</string>
    <string name="target_address">目標地址</string>
    <string name="please_input_amount_of_money">请输入提幣數量</string>
    <string name="please_input_pay_pwd">请输入交易密碼</string>
    <string name="please_input_code">请输入手機驗證碼</string>
    <string name="amount_of_money">轉出數量</string>
    <string name="pay_pwd">交易密碼</string>
    <string name="mobile_verification_code">手機驗證碼</string>
    <string name="confirmation_of_the_currency">確認提幣</string>
    <string name="currency_success">提幣成功</string>
    <string name="currency_error">提幣失败</string>
    <string name="transfer_quantity">轉入數量</string>
    <string name="please_input_transfer_quantity">请输入轉入數量</string>
    <string name="create">生成</string>
    <string name="copy_wallet_address">複製錢包地址</string>
    <string name="check_out">確認轉出</string>
    <string name="current_entrustment">當前委託</string>
    <string name="mine_entrustment">我的委託</string>
    <string name="look_commission_detail">查看委托详情</string>
    <string name="purchase">購買</string>
    <string name="entrustment_number">數量</string>
    <string name="input_number">請輸入數量</string>
    <string name="expected_to_obtain">交易額</string>
    <string name="the_current_price">單價</string>
    <string name="current_price">單價(USDT)</string>
    <string name="the_current_pkb_price">當前PKB價格為＄</string>
    <string name="current_eth_balance">當前 TGM 餘額：</string>
    <string name="current_usdt_balance">當前 USDT 餘額：</string>
    <string name="current_tgm_balance">當前 TGM 餘額：</string>
    <string name="current_balance">當前餘額：</string>
    <string name="balance">余额</string>
    <string name="access_to_dividends">買入</string>
    <string name="pan_mouth">盤口</string>
    <string name="price">價格</string>
    <string name="market_number">數量</string>
    <string name="transaction_number">數量(TGM)</string>
    <string name="current_business">當前買賣</string>
    <string name="chengjiao">最近成交</string>
    <string name="look_at_more"><u>查看更多</u></string>
    <string name="type">類型</string>
    <string name="trade_volume">預獲取</string>
    <string name="trade_volume_pkb">預獲取(USDT)</string>
    <string name="action">操作</string>
    <string name="activity_eth">活動ETH</string>
    <string name="repurchase_usdt">重購USDT</string>
    <string name="text_usdt">USDT</string>
    <string name="all">全部</string>
    <string name="sell_immediately">立即賣出</string>
    <string name="dividend_tgm">TGM</string>
    <string name="all_success">全部成交</string>
    <string name="all_success_brackets">(全部成交)</string>
    <string name="no">無</string>
    <string name="state">狀態</string>
    <string name="exchange_rate">汇率</string>
    <string name="real_time_redemption">实时兑换</string>
    <string name="date_time">時間</string>
    <string name="please_input_invitation_code">請輸入邀請碼(非必填)</string>
    <string name="please_enter_user_name">請輸入用戶名/邮箱</string>
    <string name="please_enter_user_pwd">請輸入密碼</string>
    <string name="full_name">姓名</string>
    <string name="recommendation_code">推薦碼</string>
    <string name="have_done_deal">已成交</string>
    <string name="revocation">已撤銷</string>
    <string name="revocation_brackets">(已撤銷)</string>
    <string name="in_the_pending_order">挂單中</string>
    <string name="in_the_pending_order_brackets">(挂單中)</string>
    <string name="stop_queuing">停止排隊</string>
    <string name="queuing">未成交</string>
    <string name="cance_order">是否確認取消掛單?</string>
    <string name="confirmed_that_dividends">是否確認停止買入?</string>
    <string name="confirmed_that_stop_queuing">是否確認停止排隊?</string>
    <string name="confirmed_that_delete_pictures">是否確認刪除圖片?</string>
    <string name="extra">額外</string>
    <string name="set_transaction_password">設置支付密碼</string>
    <string name="the_two_input_password_is_inconsistent">兩次輸入密碼不一致</string>
    <string name="modify_login_password_successfully">修改登錄密碼成功,請重新登錄</string>
</resources>