<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_style"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.jh.wxqb.ui.market.CurrentEntrustmentActivity">

    <com.jh.wxqb.customview.CustomTitle
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:canBack="true"
        app:titleText="@string/my_dividend" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/iv_60"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="@dimen/iv_20" />

        <LinearLayout
            android:id="@+id/ll_sel_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textColor="@color/white"
                android:textSize="@dimen/iv_20" />

            <ImageView
                android:id="@+id/iv_img"
                android:layout_width="@dimen/iv_20"
                android:layout_height="@dimen/iv_10"
                android:layout_marginLeft="@dimen/iv_10"
                android:src="@drawable/iv_down" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/transaction_number"
            android:textColor="@color/white"
            android:textSize="@dimen/iv_20" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/current_price"
            android:textColor="@color/white"
            android:textSize="@dimen/iv_20" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/state"
            android:textColor="@color/white"
            android:textSize="@dimen/iv_20" />
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/sw_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
            android:id="@+id/shop_recy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
